# librustzcash

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  HANDOFF.md  LICENSE-MIT  README.md  RELEASES.md  bindings.h  clippy-security-lints-report.md  deny.toml  pyproject.toml  release_crates.py  rust-toolchain.toml  testing.md  verify.sage
bls12_381/: Cargo.toml  RELEASES.md
bls12_381/.github/workflows/: ci.yml
bls12_381/src/: fp.rs  fp12.rs  fp2.rs  fp6.rs  g1.rs  g2.rs  lib.rs  pairings.rs  scalar.rs
bls12_381/src/notes/: design.rs
bls12_381/src/tests/: mod.rs
bolt_tze/: Cargo.toml
bolt_tze/bolt_testdata/: cust_close.json  revoke_token.json
bolt_tze/src/: lib.rs  types.rs
devtools/: Cargo.toml
ff/: Cargo.toml  README.md
ff/ff_derive/: Cargo.toml
ff/src/: lib.rs
ff_derive/: Cargo.toml
ff_derive/src/: lib.rs
group/: Cargo.toml
group/src/: cofactor.rs  lib.rs  prime.rs  wnaf.rs
jubjub/: Cargo.toml  README.md  RELEASES.md
jubjub/benches/: fq_bench.rs
jubjub/src/: fq.rs  fr.rs  lib.rs
jubjub/tests/: fq_blackbox.rs  fr_blackbox.rs
librustzcash/: Cargo.toml  README.md
librustzcash/include/: librustzcash.h
librustzcash/src/: equihash.rs  rustzcash.rs
masp/: Cargo.toml  README.md
masp/include/: libmasp.h
masp/src/: rustmasp.rs
masp_proofs/: Cargo.toml  README.md
masp_proofs/benches/: sapling.rs
masp_proofs/examples/: download-params.rs  get-params-path.rs
masp_proofs/src/: circuit.rs  constants.rs  lib.rs  prover.rs
pczt/: CHANGELOG.md  Cargo.toml  README.md
pczt/src/: common.rs  compact_migration.rs  lib.rs  orchard.rs  roles.rs  sapling.rs  transparent.rs
pczt/tests/: end_to_end.rs
sapling-crypto/: Cargo.toml
sapling-crypto/examples/: bench.rs
sapling-crypto/src/: builder.rs  bundle.rs  group_hash.rs  keys.rs  lib.rs  note.rs  prover.rs  redjubjub.rs  tree.rs  util.rs  value.rs  zip32.rs
zcash/: CHANGELOG.md  Cargo.toml  README.md
zcash/src/: lib.rs
zcash_client_backend/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
zcash_client_backend/examples/: diversify-address.rs
zcash_client_backend/lightwallet-protocol/: CHANGELOG.md  README.md
zcash_client_backend/proptest-regressions/: zip321.txt
zcash_client_backend/proto/: compact_formats.proto  proposal.proto  service.proto
zcash_client_backend/src/: address.rs  api.rs  constants.rs  data_api.rs  decrypt.rs  encoding.rs  fees.rs  keys.rs  lib.rs  privacy.rs  proposal.rs  proto.rs  scan.rs  scanning.rs  serialization.rs  sync.rs  task.rs  tor.rs  wallet.rs  welding_rig.rs  zip321.rs
zcash_client_memory/: CHANGELOG.md  Cargo.toml  build.rs
zcash_client_memory/proto/: memory_wallet.proto  notes.proto  primitives.proto  transparent.proto
zcash_client_memory/src/: block_source.rs  error.rs  input_source.rs  lib.rs  mem_wallet.rs  proto.rs  wallet_commitment_trees.rs  wallet_read.rs  wallet_write.rs
zcash_client_privacy_nym/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
zcash_client_privacy_nym/src/: lib.rs  mixnet_proxy.rs
zcash_client_privacy_nym/tests/: mixnet_proxy_e2e.rs
zcash_client_privacy_nym_dvpn/: CHANGELOG.md  Cargo.toml  README.md
zcash_client_privacy_nym_dvpn/src/: dvpn.rs  lib.rs
zcash_client_sqlite/: CHANGELOG.md  Cargo.toml  README.md
zcash_client_sqlite/src/: address.rs  chain.rs  error.rs  init.rs  lib.rs  pool_migration.rs  prepared.rs  query.rs  scan.rs  serialization.rs  testing.rs  transact.rs  util.rs  wallet.rs  zewif.rs
zcash_extensions/: CHANGELOG.md  Cargo.toml  README.md
zcash_extensions/src/: lib.rs  transparent.rs
zcash_history/: CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
zcash_history/examples/: long.rs  write.rs
zcash_history/src/: entry.rs  lib.rs  node_data.rs  test_vectors.rs  tree.rs  version.rs
zcash_ironwood_migration_backend/: CHANGELOG.md  Cargo.toml  README.md
zcash_ironwood_migration_backend/src/: build.rs  context.rs  denominations.rs  error.rs  lib.rs  note_splitting.rs  pipeline.rs  scheduling.rs  state.rs  store.rs  types.rs  wallet.rs
zcash_keys/: CHANGELOG.md  Cargo.toml  README.md
zcash_keys/src/: address.rs  encoding.rs  keys.rs  lib.rs
zcash_pool_migration/: CHANGELOG.md  Cargo.toml  README.md
zcash_pool_migration/src/: backend.rs  context.rs  denominations.rs  engine.rs  error.rs  lib.rs  reserved_source.rs  scheduling.rs  split.rs  state.rs  store.rs  testing.rs  types.rs
zcash_pool_migration/tests/: engine_commit.rs  engine_plan.rs  migration_e2e.rs  prove_chain_sim.rs
zcash_pool_migration_backend/: CHANGELOG.md  Cargo.toml  README.md
zcash_pool_migration_backend/src/: build.rs  engine.rs  lib.rs  note_splitting.rs  preparation.rs  scheduling.rs  state.rs  testing.rs  wallet.rs
zcash_pool_migration_backend/tests/: engine_commit.rs  engine_plan.rs  prove_chain_sim.rs
zcash_pool_migration_memory/: Cargo.toml
zcash_pool_migration_memory/src/: lib.rs
zcash_pool_migration_sqlite/: Cargo.toml  README.md
zcash_pool_migration_sqlite/src/: codec.rs  error.rs  lib.rs  orchard_ironwood.rs  store.rs
zcash_primitives/: CHANGELOG.md  Cargo.toml  README.md  build.rs
zcash_primitives/benches/: note_decryption.rs  pedersen_hash.rs  sapling_circuit.rs
zcash_primitives/bolt_testdata/: channel.token  cust_close.txt  merch_close.json
zcash_primitives/src/: address.rs  block.rs  consensus.rs  constants.rs  encoding.rs  extensions.rs  group_hash.rs  keys.rs  legacy.rs  lib.rs  local_consensus.rs  memo.rs  merkle_tree.rs  note_encryption.rs  pedersen_hash.rs  primitives.rs  prover.rs  redjubjub.rs  sapling.rs  serialize.rs  sighash_versioning.rs  test_vectors.rs  transparent.rs  util.rs  wtp.rs  zip32.rs  zip339.rs
zcash_proofs/: CHANGELOG.md  Cargo.toml  README.md
zcash_proofs/benches/: sapling.rs
zcash_proofs/examples/: bench.rs  download-params.rs  download-sprout-and-sapling-params.rs  get-params-path.rs
zcash_proofs/src/: circuit.rs  constants.rs  downloadreader.rs  hashreader.rs  lib.rs  prover.rs  sprout.rs
(+19646 files in other folders)
