[project]
name = "librustzcash-release-tools"
version = "0.1.0"
description = "Automated crate release script for the librustzcash workspace"
requires-python = ">=3.8"
dependencies = [
    "marko>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "target/",
    "*/target/",
    "**/*.rs",
    "**/Cargo.toml",
    "**/Cargo.lock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"