[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Implementation of the BLS12-381 pairing-friendly elliptic curve construction"
documentation = "https://docs.rs/bls12_381/"
homepage = "https://github.com/zkcrypto/bls12_381"
license = "MIT/Apache-2.0"
name = "bls12_381"
repository = "https://github.com/zkcrypto/bls12_381"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.ff]
path = "../ff"
version = "0.6"
default-features = false

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.subtle]
version = "2.2.1"
default-features = false

[features]
default = ["groups", "pairings", "alloc"]
groups = []
pairings = ["groups"]
alloc = []
nightly = ["subtle/nightly"]
