[package]
name = "devtools"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# General tool dependencies
gumdrop = "0.8"

# General Zcash dependencies
bech32.workspace = true
bip0039 = "0.11"
blake2b_simd.workspace = true
equihash.workspace = true
group.workspace = true
sha2.workspace = true
zcash_address.workspace = true
zcash_encoding.workspace = true
zcash_keys.workspace = true
zcash_note_encryption.workspace = true
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
zcash_proofs.workspace = true
zcash_protocol.workspace = true

# Transparent
secp256k1.workspace = true

# Sprout
ed25519-zebra = "4"

# Sapling
bellman.workspace = true
jubjub.workspace = true
sapling.workspace = true

# Orchard
orchard.workspace = true

# zcash-inspect tool
hex.workspace = true
lazy_static.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
uint = "0.9"

[[bin]]
name = "zcash-inspect"
path = "src/bin/inspect/main.rs"
