[package]
name = "devtools"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# General tool dependencies
gumdrop = "0.8"

# General Zcash dependencies
bech32.workspace = true
bip0039 = "0.11"
blake2b_simd.workspace = true
equihash.workspace = true
group.workspace = true
sha2.workspace = true
zcash_address.workspace = true
zcash_client_backend ={ workspace = true, features = ["lightwalletd-tonic-transport"] }
zcash_encoding.workspace = true
zcash_keys = { workspace = true, features = ["unstable"] }
zcash_note_encryption.workspace = true
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
zcash_proofs = { workspace = true, features = ["directories"] }
zcash_protocol = {workspace = true, features = ["local-consensus"] }
zip32.workspace = true

# Transparent
secp256k1.workspace = true
transparent = { workspace = true, features = ["test-dependencies"] }

# Sprout
ed25519-zebra = "4"

# Sapling
bellman.workspace = true
jubjub.workspace = true
sapling.workspace = true

# Orchard
orchard.workspace = true

# zcash-inspect tool
anyhow = "1"
hex.workspace = true
lazy_static.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, features = ["gzip", "tls-webpki-roots"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uint = "0.9"

[[bin]]
name = "zcash-inspect"
path = "src/bin/inspect/main.rs"

[lints]
workspace = true
