[package]
name = "ff_derive"
version = "0.1.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://github.com/ebfull/ff"
homepage = "https://github.com/ebfull/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/ff"

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
num-bigint = "0.1"
num-traits = "0.1"
num-integer = "0.1"
