[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the Jubjub elliptic curve group"
documentation = "https://docs.rs/jubjub/"
homepage = "https://github.com/zkcrypto/jubjub"
license = "MIT/Apache-2.0"
name = "jubjub"
repository = "https://github.com/zkcrypto/jubjub"
version = "0.3.0"
edition = "2018"

[dependencies.bls12_381]
path = "../bls12_381"
version = "0.1"
default-features = false

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies]
criterion = "0.3"

[dev-dependencies.rand_core]
version = "0.5"
default-features = false

[dev-dependencies.rand_xorshift]
version = "0.2"
default-features = false

[features]
default = []

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
